# rust-rest-api-base

./: Cargo.toml  config.json
src/: config.rs  main.rs  telemetry.rs
src/api/: types.rs
src/api/routes/: numbers.rs
